--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <nav class="navbar navbar-dark bg-dark" style = 'height: 100px'>
         <div class="container-fluid">
           <h2  style = 'color: white'>Trendy Hub</h2>
-          <i class="fas fa-cart-arrow-down"></i>
+      <div class="cart-container">
+  <i class="fas fa-cart-arrow-down"></i>
+  <span class="cart-counter" id="cartCounter">0</span>
+</div>
         </div>
       </nav>
       
