--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class = 'row'>
               <div class = 'col-md-4 col-lg-4'>
                 <div class="card" style="width: 18rem;">
-                    <img src="img/chocolate_cake.jpg" class="card-img-top" alt="...">
+                    <img src="Chocolate cake.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h3 class="card-title">Chocolate Cake</h3>
                       <h4 class="card-text">$100</h4>
@@ -60,7 +60,7 @@
             
               <div class = 'col-md-4 col-lg-4'>
                 <div class="card" style="width: 18rem;">
-                    <img src="img/pink_shoe.jpg" class="card-img-top" alt="...">
+                    <img src="Pink shoe.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h3 class="card-title">Pink Shoe</h3>
                       <h4 class="card-text">$100</h4>
@@ -71,7 +71,7 @@
 
               <div class = 'col-md-4 col-lg-4'>
                 <div class="card" style="width: 18rem;">
-                    <img src="img/shirt.jpg" class="card-img-top" alt="...">
+                    <img src="T shirt.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h3 class="card-title">T Shirt</h3>
                       <h4 class="card-text">$30</h4>
@@ -82,7 +82,7 @@
 
               <div class = 'col-md-4 col-lg-4'>
                 <div class="card" style="width: 18rem;">
-                    <img src="img/strawberry_cake.jpg" class="card-img-top" alt="...">
+                    <img src="Strawberry cake.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h3 class="card-title">Strawberry Cake</h3>
                       <h4 class="card-text">$100</h4>
