--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
               <div class = 'col-md-4 col-lg-4'>
                 <div class="card" style="width: 18rem;">
-                    <img src="img/green_shoe.jpg" class="card-img-top" alt="...">
+                    <img src="Green shoe.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h3 class="card-title">Green Shoe</h3>
                       <h4 class="card-text">$80</h4>
@@ -48,7 +48,7 @@
 
               <div class = 'col-md-4 col-lg-4'>
                 <div class="card" style="width: 18rem;">
-                    <img src="img/hamburger.jpg" class="card-img-top" alt="...">
+                    <img src="Hamburger.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h3 class="card-title">Hamburger</h3>
                       <h4 class="card-text">$50</h4>
